--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "run-tests": "npx cypress run --headless ",
     "generate-multi-cucumber-html-report": "node cypress/support/cucumber-html-report.js",
+    "generateHtmlreport": "npx cypress run --headless && node cypress/support/cucumber-html-report.html",
     "run-tagtest": "npx cypress run --spec cypress/e2e/bankerJourney1.feature   --env 'tags=@test and not @smoke'"
   },
   "keywords": [],
