--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "run-tests": "npx cypress run --headless ",
+    "runHeaded": "npx cypress run --headed --browser chrome",
     "generate-multi-cucumber-html-report": "node cypress/support/cucumber-html-report.js",
     "generateHtmlreport": "npx cypress run --headless && node cypress/support/cucumber-html-report.html",
     "run-tagtest": "npx cypress run --spec cypress/e2e/bankerJourney1.feature   --env 'tags=@test and not @smoke'"
